<resources>
    <string name="app_name">TestPolimentes</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Confirm email</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_activation_code">Activation code</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastnamme">Last name</string>
    <string name="hint_cellphone_number">Cellphone number</string>
    <string name="hint_total_perceptions">Total de percepciones</string>
    <string name="hint_total_deductions">Total de deducciones</string>
    <string name="hint_amount_request">Monto a solicitar</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_email_empty">Email address could not be empty</string>
    <string name="err_msg_email_short">Email address is too short</string>
    <string name="err_msg_email_domain">Email address not contains allowed domain</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_password_empty">Password  could not be empty</string>
    <string name="err_msg_password_uppercase_letter">Password must contain at least one uppercase letter</string>
    <string name="err_msg_password_digit">Password must contain at least one number</string>
    <string name="err_msg_password_special_characters">Password must contains . - @ , </string>
    <string name="err_msg_field_empty">This field could not be empty</string>
    <string name="err_msg_confirm_email">Email and confirm email not are equals</string>
    <string name="err_msg_confirm_password">Password and confirm password not are equals</string>
    <string name="err_msg_amount_request">The amount requested can not be greater than the maximum amount</string>
    <string name="err_deductions">El total de deducciones no puede ser mayor que el total de percepciones</string>
    <string name="title_activation_code">Activation code</string>
    <string name="invalid_activation_code">Activation code is invalid</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Credit products</string>
    <string name="tab_text_2">Credit requests</string>
    <string name="tab_text_3">User profile</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_payroll_advance">Adelanto de nómina</string>
    <string name="btn_term_credit">Credito a plazo</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_register">Register</string>
    <string name="btn_request">Solicitar adelanto</string>
    <string name="title_activity_payroll_advances">Adelanto de nómina</string>
    <string name="label_liquidity_of">Liquidez de</string>
    <string name="label_porcent_request">30% de la liquidez</string>


    <string name="label_settings">Settings</string>
    <string name="label_close_session">Close session</string>
    <string name="retrive_notifications_reuest">¿Desea recibir notificaciones sobre el estatus de las solicitudes?</string>
    <string name="retrive_notifications_new_products">¿Desea recibir notificaciones sobre nuevos productos?</string>
    <string name="label_yes">Yes</string>

</resources>
